[package]
name = "ironsea_index"
version = "0.1.0"
authors = ["EPFL-DIAS", "Lionel Sambuc <lionel.sambuc@epfl.ch>"]

edition = "2018"

description = "Traits definitions for the Iron Sea database toolkit indices."
homepage = "https://crates.io/crates/ironsea_index"
repository = "https://github.com/epfl-dias/ironsea_index"
readme = "README.md"

keywords = []
categories = ["database-implementations", "data-structures"]

license = "MIT"
#license-file = "LICENSE"

include = ["Cargo.toml", "README.md", "LICENSE", "ACKNOWLEDGEMENTS", "src/**/*.rs"]

[dependencies]
ironsea_table = "^0.1"
